# discord-markov-bot

./: .env.example  Avatars.toml  Cargo.toml  Profiles.toml  README.md
.github/workflows/: build-linux-aarch64.yaml  build-linux-x86.yaml
src/: database.rs  event_handler.rs  main.rs  markov_chain.rs  options.rs  string_cmp.rs  utils.rs
src/commands/: generate.rs  greg.rs  guess.rs  leaderboard.rs  mod.rs  ping.rs
src/utils/: helpers.rs  markov_chain.rs  mod.rs
